changes in alert message
"Again"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div id="container">
 			<h1>English Quiz</h1>
-			<marquee behavior="scroll" direction="left" bgcolor="red">Alert! Don't refresh this page while attempting quiz. It may lead to issue for which you need to attempt from first.</marquee>
+			<marquee behavior="scroll" direction="left" bgcolor="red">Alert! Don't refresh this page while attempting quiz. It may lead to issue for which you need to attempt again.</marquee>
    			<br/>
   			<div id="quiz"></div>
     		<div class="button" id="next"><a href="#">Next</a></div>
